workspace-sf/force-app/main/default/objects/CriterioIntegracao__mdt/CriterioIntegracao__mdt.object-meta.xml
<CustomObject>
    <label>Critério de integração</label>
    <pluralLabel>Critérios de integracao</pluralLabel>
</CustomObject>