workspace-sf/force-app/main/default/objects/CriterioIntegracao__mdt/fields/CodigoIntegracao__c.field-meta.xml
<CustomField>
    <fullName>CodigoIntegracao__c</fullName>
    <label>Código Integração</label>
    <length>80</length>
    <type>Text</type>
</CustomField>