workspace-sf/force-app/main/default/objects/CriterioIntegracao__mdt/fields/Criterio__c.field-meta.xml
<CustomField>
    <fullName>Criterio__c</fullName>
    <label>Critério</label>
    <length>255</length>
    <type>Text</type>
</CustomField>