workspace-sf/force-app/main/default/objects/CriterioIntegracao__mdt/fields/NomeObjeto__c.field-meta.xml
<CustomField>
    <fullName>NomeObjeto__c</fullName>
    <label>Nome Objeto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>