workspace-sf/force-app/main/default/objects/CriterioIntegracao__mdt/listViews/Tudo.listView-meta.xml
<ListView>
    <fullName>Tudo</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>CodigoIntegracao__c</columns>
    <columns>NomeObjeto__c</columns>
    <columns>Criterio__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>